@@ -26,7 +26,7 @@
         <string id="32062">Enable bluray-functions</string>
         <string id="32063">Enable network-ripping-functions</string>
         <string id="32064">Enable burning-functions</string>
-        <string id="32065">Enable customer-execution-functions</string>
+        <string id="32065">Enable customer-functions</string>
         <string id="32066">Command to execute</string>
         <string id="32067">Default size single-layer dvd</string>  
         <string id="32068">Default netcat start-port (6 ports)</string>
@@ -63,6 +63,7 @@
         <!--               -->
 
         <string id="33201">info-box</string>
+        <string id="33202">Please select bluray-track to export</string>
 
         <!--               --> 
         <!-- Error         -->
